# ghana-stock-market

./: .dockerignore  .env.prod.example  Dockerfile  RAILWAY_DEPLOYMENT.md  docker-compose.prod.yml  docker-compose.yml  env.docker
presentation/: .dockerignore  Dockerfile  README.md  env.example  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
presentation/src/: App.tsx  index.css
presentation/src/components/: MarketSummary.tsx  StockCard.tsx
presentation/src/components/charts/: InteractiveChart.tsx  PriceChart.tsx
presentation/src/components/layout/: Navbar.tsx
presentation/src/components/ui/: AlertDialog.tsx  Button.tsx  Card.tsx  LoadingSpinner.tsx  Modal.tsx  index.ts
presentation/src/pages/: Dashboard.tsx  PortfolioDashboard.tsx  PortfolioDetail.tsx  StockDetail.tsx
presentation/src/services/: api.ts  portfolioService.ts
presentation/src/types/: index.ts  portfolio.ts
presentation/src/utils/: index.ts
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
server/src/: main.rs
server/src/application/: mod.rs  portfolio.rs  use_cases.rs  worker.rs
server/src/domain/: entities.rs  mod.rs  portfolio.rs  repository.rs
server/src/infrastructure/: gse_client.rs  mod.rs  rocksdb_portfolio_repository.rs  rocksdb_repository.rs
server/src/presentation/: handlers.rs  mod.rs  portfolio_routes.rs  routes.rs
